[tool.poetry]
name = "causal-model-selection"
version = "0.1.0"
description = ""
authors = ["Matthieu Doutreligne <matt.dout@gmail.com>"]
readme = "README.md"
packages = [{include = "causal_model_selection"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
